res:dock:: fix applets get wrong position.
1. tooltip gets wrong position.
2. not vertical align.

--- a/resources/dock/css/classic/list.css
+++ b/resources/dock/css/classic/list.css
@@ -127,6 +127,7 @@
 .AppletItemImg {
   width:16px;
   height: 16px;
+  margin: 0;
 }
 
 .SystemItem .imgWrap {
